# wbcli

./: .gitignore  Cargo.toml  README.md
src/: client.rs  config.rs  logger.rs  main.rs
