[package]
name = "wbcli"
version = "0.1.0"
description = "A Wallabag command line interface"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
dirs = "3.0"
log = "0.4.14"
log4rs = "1.0.0"
serde_derive = "^1.0"
serde = "^1.0"
clap = "2.33.3"
read_input = "0.8.4"
